User api (#61)
* skip some special char


* add org filter


---------
